5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1834_2602.log
== TEST (2019-06-25 16:30:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
bacteria = array(eval(input()))
quantidade = array(eval(input(round( , 1))))
-- ERROR:
File "XXXX", line 6
    quantidade = array(eval(input(round( , 1))))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:31:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
bacteria = array(eval(input()))
quantidade = array(eval(input())
-- ERROR:
File "XXXX", line 7
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:31:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
bacteria = array(eval(input()))
quantidade = array(eval(input())
-- ERROR:
File "XXXX", line 7
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:32:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
bacteria = array(eval(input()))
quantidade = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:45:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(inv(quantidade), alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:45:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(inv(quantidade), alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:48:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(inv(quantidade), alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:52:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(quantidade, alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:52:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(inv(quantidade), alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:53:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
print(inv(quantidade))
#mg = dot(inv(quantidade), alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:54:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(quantidade, alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- EXECUTION TIME:
1.20414
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  47811.7
salmonela:  15260.0
coli:  41992.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  51227.6
salmonela:  5807.0
coli:  32348.7
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  31013.4
salmonela:  15021.5
coli:  32134.5
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:55:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
alimento = alimento.T
mg = dot(inv(quantidade), alimento)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:57:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
quantidade = quantidade.T
mg = dot(inv(alimento), quantidade)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:58:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

alimento = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
quantidade = array(eval(input()))
quantidade = quantidade.T
mg = dot(inv(alimento), quantidade)

print('estafilococo: ', round(mg[0], 1))
print('salmonela: ', round(mg[1], 1))
print('coli: ', round(mg[2], 1))

if mg[0] == min(mg):
	print('estafilococo')
elif mg[1] == min(mg):
	print('salmonela')
else:
	print('coli')
-- EXECUTION TIME:
1.27783
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
